# xorg-wasm

./: .gitignore  meson.build  meson_options.txt
glamor/: glamor_xv.c
hw/: meson.build
hw/kdrive/: meson.build
hw/kdrive/xwasm/: meson.build  xwasm.c
hw/xfree86/os-support/shared/: posix_tty.c
hw/xwayland/: xwayland-glamor-gbm.c  xwayland-input.c  xwayland-present.c
include/: meson.build
os/: access.c  connection.c  osinit.c
wasm/: .gitignore  README.md  build.sh  run_server.py  wasm.cross
wasm/fragments/: allow_socket_server.js
wasm/web/: index.html  script.js
